<resources>
    <string name="app_name" translatable="false">Molla</string>
    <string name="main_menu_all">All Apps</string>
    <string name="main_menu_settings">Settings</string>
    <string name="main_placeholder_time">12:00</string>
    <string name="main_placeholder_bat">100%</string>
    <string name="main_bat">%d%%</string>
    <string name="main_edit_fav">Edit Quick Access</string>
    <string name="main_autolaunch_overlay_title">Launching %s in…</string>
    <string name="main_autolaunch_overlay_cancel_help">Press \"Back\" now to cancel.</string>
    <string name="main_kiosk_unlock">Unlock</string>
    <string name="main_kiosk_unlocked">Kiosk Mode temporarily disabled</string>
    <string name="all_title">All Apps</string>
    <string name="all_back">Back</string>
    <string name="all_manage_custom_shortcuts">Manage Custom Shortcuts</string>
    <string name="edit_title">Quick Access</string>
    <string name="edit_subtitle">Selected items will be shown on main screen.</string>
    <string name="edit_reorder">Reorder</string>
    <string name="edit_reorder_empty">Not enough items to reorder</string>
    <string name="order_title">Reorder Icons</string>
    <string name="order_subtitle">Change the order of Quick Access icons.</string>
    <string name="manage_custom_shortcuts_title">Custom Shortcuts</string>
    <string name="manage_custom_shortcuts_back">Back</string>
    <string name="manage_custom_shortcuts_add">Add</string>
    <string name="manage_custom_shortcuts_edit">Edit</string>
    <string name="manage_custom_shortcuts_delete">Delete</string>
    <string name="settings_title">Settings</string>
    <string name="settings_category_appearance">Appearance</string>
    <string name="settings_wallpaper_title">Set Custom Wallpaper</string>
    <string name="settings_wallpaper_desc">Set the wallpaper used within Molla. This will *not* change the system wallpaper. Long-press this menu to remove the wallpaper.</string>
    <string name="settings_customize_indicator_title">Customize Indicators</string>
    <string name="settings_customize_indicator_desc">Set which indicator to show on main screen.</string>
    <string name="settings_simple_background_title">Simple Icon Background</string>
    <string name="settings_simple_background_desc">Use a simple gray rectangle as the icon background.</string>
    <string name="settings_use_system_bar_title">Show System Bar</string>
    <string name="settings_use_system_bar_desc">Display System Bar on main screen.</string>
    <string name="settings_outline_title">Show Outline on Focus</string>
    <string name="settings_outline_desc">Show white outline instead of highlight on focused item.</string>
    <string name="settings_category_behavior">Behavior</string>
    <string name="settings_hide_non_tv_apps_title">Hide Non-TV Apps</string>
    <string name="settings_hide_non_tv_apps_desc">Only show apps that can be run on Android TV.</string>
    <string name="settings_closeable_title">Allow Close</string>
    <string name="settings_closeable_desc">Make Molla closeable by pressing Back on main screen. Useful if using Molla as an auxiliary launcher.</string>
    <string name="settings_autostart_at_boot_title">Autostart Molla at Boot</string>
    <string name="settings_autostart_at_boot_desc">Start Molla automatically after the device boots up. Useful if the device does not allow changing the default launcher.</string>
    <string name="settings_kiosk_mode_title">Kiosk Mode</string>
    <string name="settings_kiosk_mode_desc">Hide all buttons except Quick Access icons from the main screen.</string>
    <string name="settings_category_autolaunch">Auto-Launch</string>
    <string name="settings_autolaunch_app_title">Auto-Launch App</string>
    <string name="settings_autolaunch_app_desc">When set, the selected app will automatically launch when Molla first launches after rebooting the device. May not work on some devices.</string>
    <string name="settings_autolaunch_delay_title">Auto-Launch Delay</string>
    <string name="settings_autolaunch_delay_desc">Delay Auto-Launch for set seconds. Auto-Launch can be canceled during this delay.</string>
    <string name="settings_category_troubleshoot">Troubleshooting</string>
    <string name="settings_orientation_title">Forced Orientation</string>
    <string name="settings_orientation_desc">Set forced orientation to be used within Molla. May cause problems. May not work on some devices.</string>
    <string name="settings_reboot_alt_detect_title">Alternative Reboot Detection</string>
    <string name="settings_reboot_alt_detect_desc">For devices with no real-time clock, default reboot detection may not work reliably. If so, try enabling this option. Otherwise, not recommended.</string>
    <string name="settings_category_about">About</string>
    <string name="settings_about_title" translatable="false">Molla %s</string>
    <string name="settings_about_desc" translatable="false">© 2022‐2026 sinu</string>
    <string name="settings_about_secret_enabled">Goofy settings enabled. Reload settings screen to take effect.</string>
    <string name="settings_about_secret_disabled">Goofy settings disabled. Reload settings screen to take effect.</string>
    <string name="settings_category_system_settings">Quick Access to System Settings</string>
    <string name="settings_open_system_settings">System Settings</string>
    <string name="settings_open_system_settings_desc">Open the Settings app.</string>
    <string name="settings_open_system_display">Display Settings</string>
    <string name="settings_open_system_display_desc">Open the Display settings.</string>
    <string name="settings_open_system_apps">Apps Settings</string>
    <string name="settings_open_system_apps_desc">Open the Apps settings.</string>
    <string name="settings_kiosk_set_pin_title">Set up PIN</string>
    <string name="settings_kiosk_set_pin_content">Should a PIN code be required to unlock Kiosk Mode?\n\nIf not, pressing the \"Unlock\" icon will immediately unlock the Kiosk Mode.</string>
    <string name="settings_autostart_at_boot_perm_title">Permission required</string>
    <string name="settings_autostart_at_boot_perm_content">This feature requires a special permission. Please read the following carefully.\n\nPressing \"OK\" button will take you to a screen where you can grant specific apps permission to display over other apps.\n\nFind Molla in the list, and grant the permission. Once the permission is granted, you can enable this feature.\n\nTo continue, press \"OK\".</string>
    <string name="settings_error_wallpaper">Wallpaper is not supported on this device</string>
    <string name="settings_error_wallpaper_no_picker">You need an Image viewer app to perform this action!</string>
    <string name="settings_error_wallpaper_image_read_fail">Failed to load image!</string>
    <string name="settings_error_settings_no_activity">This setting is not available on this device!</string>
    <string name="settings_error_settings_security_error">Failed to open this settings screen!</string>
    <string name="settings_error_wallpaper_no_permission">Failed to open image picker!</string>
    <string name="dialog_customize_indicators_title">Customize Indicators</string>
    <string name="dialog_customize_indicators_subtitle">Selected indicators will show up on main screen.</string>
    <string name="dialog_customize_indicators_toggle_bt">Bluetooth</string>
    <string name="dialog_customize_indicators_toggle_net">Network</string>
    <string name="dialog_customize_indicators_toggle_bat">Battery</string>
    <string name="dialog_customize_indicators_toggle_time">Time</string>
    <string name="dialog_orientation_title">Forced Orientation</string>
    <string name="dialog_orientation_subtitle">May cause problems. May not work on some devices. If unsure, set to \"Disable\".</string>
    <string name="dialog_orientation_disable">Disable</string>
    <string name="dialog_orientation_landscape">Landscape</string>
    <string name="dialog_orientation_portrait">Portrait</string>
    <string name="dialog_autolaunch_select_title">App to Auto-Launch</string>
    <string name="dialog_autolaunch_select_subtitle">To disable the feature, select \"None\".</string>
    <string name="dialog_autolaunch_select_disable">None</string>
    <string name="dialog_autolaunch_delay_title">Auto-Launch Delay</string>
    <string name="dialog_autolaunch_delay_subtitle">Auto-Launch can be canceled during this delay.</string>
    <string name="dialog_autolaunch_delay_immediate">Launch Immediately</string>
    <string name="dialog_autolaunch_delay_3s">3 seconds</string>
    <string name="dialog_autolaunch_delay_5s">5 seconds</string>
    <string name="dialog_autolaunch_delay_10s">10 seconds</string>
    <string name="dialog_custom_item_title_create">Create a Custom Shortcut</string>
    <string name="dialog_custom_item_title_edit">Edit a Custom Shortcut</string>
    <string name="dialog_custom_item_app">App</string>
    <string name="dialog_custom_item_title">Title</string>
    <string name="dialog_custom_item_custom_banner">Banner</string>
    <string name="dialog_custom_item_advanced">Show Advanced Options</string>
    <string name="dialog_custom_item_activity">Activity</string>
    <string name="dialog_custom_item_extras">Intent Extras</string>
    <plurals name="dialog_custom_item_extras_count">
        <item quantity="one">%d extra set</item>
        <item quantity="other">%d extras set</item>
    </plurals>
    <string name="dialog_custom_item_extras_name">Name</string>
    <string name="dialog_custom_item_extras_type">Type</string>
    <string name="dialog_custom_item_extras_value">Value</string>
    <string name="dialog_custom_item_select">Select</string>
    <string name="dialog_custom_item_clear">Clear</string>
    <string name="dialog_custom_item_edit">Edit</string>
    <string name="dialog_custom_item_add">Add</string>
    <string name="dialog_custom_item_save">Save</string>
    <string name="dialog_custom_item_default">Use Default</string>
    <string name="dialog_custom_item_not_set">Not set</string>
    <string name="dialog_custom_item_none">Not selected</string>
    <string name="dialog_custom_item_select_app_title">App to Launch</string>
    <string name="dialog_custom_item_edit_title_title">Shortcut Title</string>
    <string name="dialog_custom_item_activity_list_title">Activity to Launch</string>
    <string name="dialog_custom_item_activity_list_subtitle">WARNING: Setting this option might be dangerous. If unsure, select (Default).</string>
    <string name="dialog_custom_item_activity_list_default">(Default)</string>
    <string name="dialog_custom_item_edit_title_subtitle">Set it empty to use the default title.</string>
    <string name="dialog_custom_item_error_invalid_banner">Failed to load image!</string>
    <string name="dialog_custom_item_error_app_not_set">App must be set!</string>
    <string name="dialog_custom_item_error_invalid_extra_value">Value is invalid!</string>
    <string name="dialog_custom_item_error_no_picker">You need an Image viewer app to perform this action!</string>
    <string name="dialog_kiosk_pin_title">Enter PIN (up to 6 digits)</string>
    <string name="dialog_kiosk_pin_title_repeat">Repeat PIN</string>
    <string name="dialog_kiosk_pin_title_unlock">Enter PIN</string>
    <string name="dialog_kiosk_pin_backspace">Backspace</string>
    <string name="dialog_kiosk_pin_repeat_mismatch">PIN does not match!</string>
    <string name="dialog_kiosk_pin_unlock_mismatch">PIN does not match!</string>
    <string name="dialog_app_details_name_placeholder" translatable="false">App Name</string>
    <string name="dialog_app_details_icon">App Icon</string>
    <string name="dialog_app_details_open">Open</string>
    <string name="dialog_app_details_app_info">App Info</string>
    <string name="dialog_app_details_uninstall">Uninstall</string>
    <string name="common_cancel">Cancel</string>
</resources>