<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/_16sdp"
    android:paddingEnd="@dimen/_16sdp"
    android:paddingTop="@dimen/_12sdp"
    android:paddingBottom="@dimen/_12sdp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_dialog_orient_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_orientation_title"
        android:textSize="@dimen/_16ssp" />

    <TextView
        android:id="@+id/tv_dialog_orient_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_orientation_subtitle"
        android:textSize="@dimen/_12ssp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_8sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:id="@+id/rb_dialog_orient_disable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_orientation_disable"
                    android:textSize="@dimen/_12sdp" />

                <RadioButton
                    android:id="@+id/rb_dialog_orient_landscape"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_orientation_landscape"
                    android:textSize="@dimen/_12sdp" />

                <RadioButton
                    android:id="@+id/rb_dialog_orient_portrait"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_orientation_portrait"
                    android:textSize="@dimen/_12sdp" />
            </RadioGroup>
        </LinearLayout>
    </ScrollView>

</LinearLayout>