<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_36sdp"
    android:clickable="true"
    android:descendantFocusability="afterDescendants"
    android:focusable="true"
    android:gravity="center_vertical" >

    <Button
        android:id="@+id/btn_custom_item_extra_name"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/focus_highlight"
        android:ellipsize="end"
        android:fontFamily="sans-serif-condensed"
        android:maxLines="1"
        android:text="@string/dialog_custom_item_extras_name"
        android:textAllCaps="false"
        android:textSize="@dimen/_11ssp" />

    <Button
        android:id="@+id/btn_custom_item_extra_type"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/focus_highlight"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/dialog_custom_item_extras_type"
        android:textAllCaps="false"
        android:textSize="@dimen/_11ssp" />

    <Button
        android:id="@+id/btn_custom_item_extra_value"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/focus_highlight"
        android:ellipsize="end"
        android:fontFamily="sans-serif-condensed"
        android:maxLines="1"
        android:text="@string/dialog_custom_item_extras_value"
        android:textAllCaps="false"
        android:textSize="@dimen/_11ssp" />

    <CheckBox
        android:id="@+id/cb_custom_item_extra_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/focus_highlight"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/iv_custom_item_extra_delete"
        android:layout_width="@dimen/_36sdp"
        android:layout_height="@dimen/_36sdp"
        android:layout_weight="0"
        android:clickable="true"
        android:contentDescription="@string/manage_custom_shortcuts_delete"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:padding="@dimen/_8sdp"
        android:background="@drawable/focus_highlight"
        app:srcCompat="@drawable/ic_delete"
        tools:ignore="TouchTargetSizeCheck" />
</LinearLayout>