<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/_8sdp"
    android:paddingBottom="@dimen/_14sdp"
    android:paddingStart="@dimen/_14sdp"
    android:paddingEnd="@dimen/_14sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/_4sdp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_dialog_app_details_icon"
            android:layout_width="@dimen/_48sdp"
            android:layout_height="@dimen/_48sdp"
            android:layout_weight="0"
            android:padding="@dimen/_6sdp"
            android:contentDescription="@string/dialog_app_details_icon"
            app:srcCompat="@drawable/ic_apps" />

        <TextView
            android:id="@+id/tv_dialog_app_details_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/_6sdp"
            android:text="@string/dialog_app_details_name_placeholder"
            android:textSize="@dimen/_15ssp" />

        <ImageView
            android:id="@+id/iv_dialog_app_details_close"
            android:layout_width="@dimen/_48sdp"
            android:layout_height="@dimen/_48sdp"
            android:layout_weight="0"
            android:padding="@dimen/_10sdp"
            android:background="@drawable/focus_highlight"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="false"
            android:focusedByDefault="false"
            android:contentDescription="@string/common_cancel"
            app:srcCompat="@drawable/ic_close"
            tools:targetApi="26" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_4sdp">

        <LinearLayout
            android:id="@+id/ll_dialog_app_details_open"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:background="@drawable/focus_highlight"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="false"
            android:focusedByDefault="true"
            android:orientation="vertical"
            android:padding="@dimen/_4sdp"
            android:contentDescription="@string/dialog_app_details_open"
            tools:targetApi="26">

            <ImageView
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_32sdp"
                android:contentDescription="@string/dialog_app_details_open"
                android:padding="@dimen/_7sdp"
                app:srcCompat="@drawable/ic_open" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/dialog_app_details_open"
                android:textSize="@dimen/_13ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_dialog_app_details_app_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:background="@drawable/focus_highlight"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="false"
            android:orientation="vertical"
            android:padding="@dimen/_4sdp"
            android:contentDescription="@string/dialog_app_details_app_info">

            <ImageView
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_32sdp"
                android:contentDescription="@string/dialog_app_details_app_info"
                android:padding="@dimen/_7sdp"
                app:srcCompat="@drawable/ic_info" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/dialog_app_details_app_info"
                android:textSize="@dimen/_13ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_dialog_app_details_uninstall"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:background="@drawable/focus_highlight"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="false"
            android:orientation="vertical"
            android:padding="@dimen/_4sdp"
            android:contentDescription="@string/dialog_app_details_uninstall">

            <ImageView
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_32sdp"
                android:contentDescription="@string/dialog_app_details_uninstall"
                android:padding="@dimen/_7sdp"
                app:srcCompat="@drawable/ic_delete" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/dialog_app_details_uninstall"
                android:textSize="@dimen/_13ssp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>